2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b2)

	* Fixed slideshow on the Mac (the top of the image was
	  obscured by the menu bar). I can't figure out why the Mac VM
	  will not go into full-screen mode...
	* Fixed a potential VM killer bug with going into slideshow
	  mode.

2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b1)

	* Fixed text color in list and tree when selected.
	* State is clean after an upload attemps (since state
	  was saved to the default location).
	* Fixed bug where loading a state with no pictures in it
	  would make the UI disabled.

	Thanks to Robert Harlow for these.

2004-02-11  Pierre-Luc Paour <gallery@paour.com> (1.3)

	* Fixed moving album to root of Gallery.
	* Changed log file name to GalleryRemoteLog.txt and updated the
	  docs to reflect the change of name and location.

	Release!

2004-02-10  Pierre-Luc Paour <gallery@paour.com> (1.3-b29)

	* Added support for flushing caches. This is useful when uploading
	  from a removable media where the picture names may be the same.
	* Added support for limiting the number of images in a slideshow,
	  similar to the javascript version. Also for disabling recursion.

2004-02-09  Pierre-Luc Paour <gallery@paour.com> (1.3-b28)

	* Fixed yet another concurrency problem in slideshow, when using
	  both manual and automatic slide changes.
	* Fixed caption not being outlined. Saldy, this means the caption
	  is not HTML capable and single-line only.

2004-02-04  Pierre-Luc Paour <gallery@paour.com> (1.3-b27)

	* GR now requires Java 1.4 or later, too many things are unsupported
	  on 1.3 and all OSes have 1.4 VMs.
	* Disabled some album properties and added a note regarding the
	  fact that these properties are read-only for now.
	* Added random option to slideshow.
	* Changed font sizes on Mac applet so it fits the dimensions.
	  The applet still crashes Safari though. I've submitted a bug
	  report to Apple.
	* Added French (Christophe Lallement) and Catalan (sergidsca)