@@ -489,3 +489,4 @@ AppletMini.pictures = List of pictures to upload (drag and drop or click Add Pic
 AppletSlideshow.Start = Start slideshow
 AppletSlideshow.Disabled = <html>If some of the options above are greyed-out, the \
 		administrator of this gallery has forced the corresponding settings.</html>
+AppletSlideshow.emptyAlbum = There are no pictures to show in this album. Use the navigation menu at the top to go back to the album view.
